--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxthub/core": "^0.8.17",
     "@pinia/nuxt": "^0.9.0",
     "@vee-validate/zod": "^4.15.0",
     "eslint": "^9.20.1",
